unpackaged/objects/Routing_Data__c.object
<CustomObject>
    <description>Used for storing local partner assignments</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Routing Data</relationshipLabel>
        <relationshipName>Routing_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pesticides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pesticides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solid_Waste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solid Waste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toxic_Substances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toxic Substances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Routing Data</label>
    <listViews>
        <fullName>Air_Routing</fullName>
        <columns>NAME</columns>
        <columns>Zip_Code__c</columns>
        <columns>Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Air Routing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>Air__c</columns>
        <columns>Pesticides__c</columns>
        <columns>Solid_Waste__c</columns>
        <columns>Toxic_Substances__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pesticides_Routing</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pesticides__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pesticides Routing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Solid_Waste_Routing</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Solid_Waste__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Solid Waste Routing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Toxics_Routing</fullName>
        <columns>NAME</columns>
        <columns>Zip_Code__c</columns>
        <columns>Agency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Toxic_Substances__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Toxics Routing</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RR - {00000000}</displayFormat>
        <label>Routing Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>